--- a/m.html
+++ b/m.html
@@ -27,7 +27,7 @@
     <main>
         <section class="banner">
             <h1 class="mr">Полная версия </h1>
-            <p class="money">Музеи - национальное достояние нашей страны, но к сожалению, некоторые люди в силу возможностей своего здоровья и места проживания не могут посетить музеи, которые хотели бы. Мы создали расширенную версию виртуального музея сновидений Зигмунда Фрейда, которая оснащена электронным гидом, он расскажет обо всех экспонатах так, как в реальном музее. Стомость билета в виртуальный музей равна стоимсти обычного билета с дейтвующими скидками для определенных групп людей. </p>
+            <p class="money">Музеи - национальное достояние нашей страны, но к сожалению, некоторые люди в силу возможностей своего здоровья и места проживания не могут посетить музеи, которые хотели бы. Мы создали расширенную версию виртуального музея сновидений Зигмунда Фрейда, которая оснащена электронным гидом, он расскажет обо всех экспонатах так, как в реальном музее. Стоимость билета в виртуальный музей равна стоимости обычного билета с дейтвующими скидками для определенных групп людей. </p>
         </div>
         </section>
         <section class="photo">
