--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             <p class="p_banner">Сон или реальность?</p>
             <div class="cont_banner">
             <img class="ayato" src="images/page1.png">
-            <a class="button" href="https://youtu.be/Z76XQh98YY0">тестировать</a>
+            <a class="button" href="https://www.spatial.io/s/vika-s-Virtual-Scene-6447c038ce8f256cd8820ccb?share=5452474714831337063">тестировать</a>
         </div>
         </section>
         <section class="photo">
